# qmog.cpp

./: .gitignore  CMakeLists.txt  How it works.md  PERPLEXITY.md  README.md  export_mistral.py  perplexity.sh
.github/workflows/: ci.yml  perplexity.yml  warm-model-cache.yml
docs/: architecture.md  cpu-optimizations.md  f16-optimizations.md  model-binary.md  tensor-storage.md
include/: binary_reader.h  inference_state.h  kernels.h  model_format.h  modules.h  parameters.h  tokenizer.h
include/backend/metal/: kernels.h  metal_backend.h
include/common/: arena.h  dtype.h  shape.h  storage.h  tensor.h
include/loader/: binary_reader.h  model_load.h
include/model/: model.h
include/tokenizer/: qwen_tokenizer.h  utf8.h
scripts/: perplexity.py
scripts/ci/: prepare_model.sh
scripts/test/mistral/: logits.py
src/: main.cpp
src/backend/cpu/: kernels.cpp
src/backend/metal/: kernels.cpp  metal_backend.mm
src/common/: shape.cpp  storage.cpp  tensor.cpp
src/decode/: sampling.cpp
src/eval/: perplexity.cpp
src/loader/: model_load.cpp  parameters.cpp
src/model/: model.cpp
src/model/mistral/: modules.cpp
src/tokenizer/: qwen_pre_tokenize.cpp  qwen_tokenizer.cpp  tokenizer.cpp
test/diag/: layer_bisect.cpp
test/mistral/: logits_expected.txt  main.cpp  test_logits.cpp  test_model_load.cpp  test_modules.cpp  test_tokenizer.cpp
test/mistral/setup/: context.cpp  context.h
test/qwen/: main.cpp  test_model_load.cpp  test_pre_tokenize.cpp  test_tensor.cpp  test_tokenizer.cpp
test/qwen/expected/: model_load.inl  pre_tokenize.inl  tokenizer.inl
test/qwen/setup/: context.cpp  context.h
